@@ -3,7 +3,7 @@ aes-256-cbc:../lib/silcsim/modules/aes.sim.so:32:16
 aes-192-cbc:../lib/silcsim/modules/aes.sim.so:24:16
 aes-128-cbc:../lib/silcsim/modules/aes.sim.so:16:16
 twofish-256-cbc:../lib/silcsim/modules/twofish.sim.so:32:16
-twofish-192-cbc:../lib/silcsim/modules/twofish.sim.so:24:16  
+twofish-192-cbc:../lib/silcsim/modules/twofish.sim.so:24:16
 twofish-128-cbc:../lib/silcsim/modules/twofish.sim.so:16:16
 mars-256-cbc:../lib/silcsim/modules/mars.sim.so:32:16
 mars-192-cbc:../lib/silcsim/modules/mars.sim.so:24:16
@@ -25,10 +25,10 @@ nobody:nobody
 Mun huone:Mun servo:Pekka Riikonen:priikone@poseidon.pspt.fi
 
 [ServerInfo]
-lassi.kuo.fi.ssh.com:10.2.1.7:Kuopio, Finland:1334
+lassi.kuo.fi.ssh.com:212.146.42.253:Kuopio, Finland:1334
 
 [ListenPort]
-10.2.1.7:10.2.1.7:1334
+212.146.42.253:212.146.42.253:1334
 
 [Logging]
 infologfile:silcd2.log:10000
@@ -49,10 +49,10 @@ errorlogfile:silcd2.log:10000
 [AdminConnection]
 
 [ServerConnection]
-10.2.1.7:passwd:priikone:1333:1:1
+212.146.42.253:passwd:priikone:1333:1:1
 
 [RouterConnection]
-10.2.1.7:passwd:priikone:1335:1:1:0
+212.146.42.253:passwd:priikone:1335:1:1:0
 
 [DenyConnection]
 [RedirectClient]
