@@ -6,9 +6,9 @@
 # If the cipher is builtin the <module path> maybe omitted.
 #
 [cipher]
-rijndael-256-cbc:../lib/silcsim/modules/rijndael.sim.so:32:16
-rijndael-192-cbc:../lib/silcsim/modules/rijndael.sim.so:24:16
-rijndael-128-cbc:../lib/silcsim/modules/rijndael.sim.so:16:16
+aes-256-cbc:../lib/silcsim/modules/aes.sim.so:32:16
+aes-192-cbc:../lib/silcsim/modules/aes.sim.so:24:16
+aes-128-cbc:../lib/silcsim/modules/aes.sim.so:16:16
 twofish-256-cbc:../lib/silcsim/modules/twofish.sim.so:32:16
 twofish-192-cbc:../lib/silcsim/modules/twofish.sim.so:24:16
 twofish-128-cbc:../lib/silcsim/modules/twofish.sim.so:16:16
